--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,11 @@ email: email@yourdomain.com
 
 # Build settings
 markdown: kramdown
-gems: [jekyll-paginate]
+kramdown:
+  input: GFM
+#markdown: CommonMarkGhPages
+highlighter: rouge
+plugins: [jekyll-paginate]
 permalink: pretty
 
 # Pageinate settings
