change blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Liang's Blog"
+title: "Liam's Blog"
 subtitle: "陈亮亮"
 description: "一个神奇的网站"
 baseurl: "" # the subpath of your site, e.g. /blog
